--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </p>
 
 
-      <form action="#" method="POST" class="popup__form">
+      <form action="#" class="popup__form">
 
         <h3 class="form__heading">
           Имя
