--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
 
         <input minlength="2" maxlength="15" value="+7" placeholder="+7 (777) 777 77 77" type="tel" class="form__input">
 
-        <button onclick="none()" class="form__btn btn btn_fill">
+        <div onclick="none()" class="form__btn btn btn_fill">
           Заказать звонок
-        </button>
+        </div>
 
         <span class="form__agree">
           Нажимая на кнопку, вы соглашаетесь на обработку персональных данных
